// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField Can accept input 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Displays a bold label when strongLabel prop is true 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <strong>
        <span>
          Test Field
        </span>
      </strong>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Displays character count when maxlength and value are present 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      maxlength="10"
      name="Test Field"
    >
      hello
    </textarea>
    <p>
      <i>
        5 characters left
      </i>
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextareaField Displays error message when present 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea usa-input-error"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <span
      class="usa-input-error-message"
      tabindex="0"
    >
      Something went wrong
    </span>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Displays screen-reader only label when hideLabel prop is true 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="sr-only question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Does not display character count when maxlength is present, but value is not present 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      maxlength="10"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Emojis consume 2 characters 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      maxlength="2"
      name="Test Field"
    >
      😀
    </textarea>
    <p>
      <i>
        0 characters left
      </i>
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextareaField Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Respects characterLimitTopRight prop on the textarea field 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <p
      style="float: right; margin-bottom: 0px; line-height: inherit;"
    >
      <i>
        5 characters left
      </i>
    </p>
    <textarea
      id="Test Field"
      maxlength="10"
      name="Test Field"
    >
      Notes
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`TextareaField Respects disabled prop on the textarea field 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
      </span>
    </label>
    <textarea
      disabled=""
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Respects optional prop on the textarea field 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
        <span
          class="cf-optional"
        >
          Optional
        </span>
      </span>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;

exports[`TextareaField Respects required prop on the textarea field 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textarea"
  >
    <label
      class="question-label"
      for="Test Field"
    >
      <span>
        Test Field
        <span
          class="cf-required"
        >
          Required
        </span>
      </span>
    </label>
    <textarea
      id="Test Field"
      name="Test Field"
    />
  </div>
</DocumentFragment>
`;
